--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div>
             <h1>NuCamp</h1>
-            <h2>a better way to camp_test</h2>
+            <h2>a better way to camp</h2>
         </div>
     </header>
 
