--- a/contactus.html
+++ b/contactus.html
@@ -1,4 +1,4 @@
-f<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -75,7 +75,7 @@ f<!DOCTYPE html>
             <i class="fa fa-phone"></i> 1-206-555-1234<br>
             <i class="fa fa-envelope-o"></i> campsites@nucamp.co
         </div>
-        
+    
 
         <div class="row row-content">
             <div class="col-12">
